# mex

./: .gitignore  AGENTS.md  ARCHITECTURE.md  DATABASE.md  DEV.md  IMPL.md  INSTALL.md  LICENSE  MEX.md  README.md  REGEXP.md  Rust Architect Review.txt  UC-02.md  UC-03.md  UC-04.md  UC-05.md  UC-08.md  UC-09.md  USECASES.md  UX.md  install.sh
.agents/: plugin.json
.agents/agents/requirements-engineer/: AGENT.md
.agents/agents/rust-architect/: AGENT.md
.agents/agents/rust-developer/: AGENT.md
.agents/agents/ux-designer/: AGENT.md
.agents/rust-quality-checker/: SKILL.md
.agents/skills/database-expert/: SKILL.md
.agents/skills/mex-chaos-tester/: SKILL.md
.config/mex/: config.toml
.github/workflows/: ci.yml  release.yml
doc/: ARCHITECTURE.md  DATABASE.md  DEV.md  IMPL.md  TESTING.md
mex/: .gitignore  ADL.md  Cargo.toml
mex/spec/: UC-04-selecting-files.md  UC-05-tag-filtering.md  UC-06-create-view.md  UC-08-smart-import.md  UC-13-mpv-integration.md  UC-14-caption.md  UC-16-slugify.md  UC-17-navigation-groups.md
mex/src/: app.rs  config.rs  db.rs  import.rs  lib.rs  main.rs  player.rs  ui.rs  version.rs
mex_v1/: Cargo.toml  cargo_run.sh  migrate_sample.py  pane.txt  playground.toml  walkthrough.md
mex_v1/src/: app.rs  browse_tests.rs  config.rs  main.rs
mex_v1/src/db/: media.rs  mod.rs  tags.rs
mex_v1/src/domain/: filter.rs  input.rs  media.rs  mod.rs  parser.rs  tag.rs
mex_v1/src/services/: commands.rs  mod.rs  mpv.rs
mex_v1/src/ui/: file_list.rs  filter_bar.rs  layout.rs  mod.rs  preview.rs  semantic.rs  status.rs  theme.rs
prd/: PRD-00-concepts-and-ux.md  PRD-01-config.md  PRD-02-browse.md  PRD-03-themes.md  PRD-04-navigation-and-zoom.md  PRD-04-navigation.md  PRD-05-file-details.md  PRD-05-semantic-zoom.md  PRD-06-selection.md  PRD-07-tag-type-filter.md  PRD-08-external-viewer.md  PRD-09-create-view.md  PRD-10-fix-date.md  PRD-11-smart-import.md  PRD-12-tags.md  PRD-13-fix-extension.md  PRD-14-trash-delete.md  PRD-15-mpv.md  PRD-16-caption.md  PRD-17-sem-viewer.md  PRD-18-slugify.md  README.md
scripts/: fix_partial_hashes.py  migrate.py
sem/: ARCHITECTURE.md  Cargo.toml  DEV.md  README.md
sem/src/: cache.rs  main.rs  window.rs
spec/: INDEX.md  README.md  UC-00-concepts-and-ux.md  UC-00.md  UC-01-config.md  UC-01.md  UC-02.md  UC-03.md  UC-05-tag-filtering.md  UC-06.md  UC-07.md  UC-08-smart-import.md  UC-08.md  UC-09-assign-remove-tags.md  UC-09.md  UC-10-fix-extension.md  UC-10.md  UC-11-trash-and-delete.md  UC-11.md  UC-12.md  UC-13-mpv-integration.md  UC-13.md  UC-14-caption.md  UC-14.md  UC-15.md  UC-16-slugify.md
(+4 files in other folders)
