[package]
name = "mex"
version = "0.1.0"
edition = "2021"
default-run = "mex"

[[bin]]
name = "mex"
path = "src/main.rs"

[dependencies]
ratatui = "0.30"
crossterm = "0.28"
rusqlite = { version = "0.31", features = ["bundled"] }
anyhow = "1"
ratatui-image = { version = "11", default-features = false, features = ["image-defaults", "crossterm"] }
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }
filetime = "0.2"
kamadak-exif = "0.5"
sha2 = "0.10"
hex = "0.4"
walkdir = "2"
serde_json = "1"
regex = "1.12.3"
