[package]
name = "mex_v1"
version = "0.1.0"
edition = "2021"

[dependencies]
ratatui = "0.30"
crossterm = "0.28"
rusqlite = { version = "0.31", features = ["bundled"] }
anyhow = "1"
ratatui-image = { version = "11", default-features = false, features = ["crossterm", "image-defaults"] }
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "bmp", "gif", "webp"] }
filetime = "0.2"
kamadak-exif = "0.5"
sha2 = "0.10"
hex = "0.4"
walkdir = "2"
regex = "1.12"

[dev-dependencies]
tempfile = "3"
